Fixed button alignment issue in logic3.js. Also added related stuff to style.css.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,3 +84,9 @@
     height: 1px; 
     border: 0;
 }
+
+.colorButtonBox{
+    text-align:center;
+    border-radius: 15px;
+    margin-bottom:5px;
+}
